# guard-demo-client

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  Docker.md  Dockerfile  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements.txt  start_all.py  start_backend.py  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
backend/: _config_override.py  agent.py  audit.py  audit_stream.py  auth.py  config_redaction.py  costs.py  lakera.py  litellm_bootstrap.py  llm_capabilities.py  llm_client.py  main.py  mcp.py  migrations.py  models.py  ocr.py  playbooks.py  providers.py  rag.py  scenarios.py  schemas.py  toolhive.py  webhooks.py
backend/guardrail_provider/: __init__.py  base.py  registry.py  (+7 more)
designdocs/: MULTI_WORKSPACE_DESIGN.md
docs/: API.md  ARCHITECTURE.md  CLAUDE_FOR_OFFICE.md  CONFIGURATION.md  FEATURES.md  PROJECT_STRUCTURE.md  TRAFFIC_FLOW.md
e2e/: smoke.spec.ts
scripts/: seed_aigw_policy_playbooks.py  seed_poc_verification_playbook.py
src/: App.tsx  index.css  main.tsx
tests/: conftest.py  test_anthropic_proxy.py  test_audit_stream.py  test_auth.py  test_costs.py  test_disabled_providers.py  test_llm_capabilities.py  test_ocr.py  test_playbook_runs.py  test_playbooks.py  test_portkey_guardrail.py  test_portkey_headers.py  test_provider_config_lock.py  test_providers.py  test_scenarios.py  test_security.py  test_seed_poc_verification_playbook.py
(+40 files in other folders)
