[project]
name = "guard-demo-client"
version = "0.1.0"
description = "Agentic Demo backend and tooling"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["backend"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends/File rely on this)
    "E501",  # line too long (can tighten later; many lines slightly over 120)
]

[tool.ruff.format]
quote-style = "double"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
filterwarnings = [
    # LiteLLM + Pydantic v2 deprecation noise drowns out real failures
    "ignore::DeprecationWarning",
]
